--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ comments: false
                     </span>
                     <span class="meta-info">
                         <span class="octicon octicon-organization"></span>
-                        <a href="{{ site.organization_url }}" target="_blank">{{ site.organization }}</a>
+                        <a href="{{ site.company_url }}" target="_blank">{{ site.worked_company }}</a>
                     </span>
                      <span class="meta-info">
                         <span class="octicon octicon-mark-github"></span>
