--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 class: home
 css: ['pages/index.css']
-comments: false
+comments: true
 ---
 
 {% assign assets_base_url = site.url %}
